<package>
  <name>rowi</name>
  <version>1.0.0</version>
  <description>Robot Operations Web Interface</description>
  <maintainer email="heidarss@usc.edu">Hordur Heidarsson</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rowi</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Hordur Heidarsson</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>driver_base</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>web_video_server</run_depend>
  <run_depend>python-catkin-pkg</run_depend>

  <!-- Dependencies needed only for running tests. -->

</package>
